Fixed Android 1.6+ crash - layout_width and layout_height must be specified for PreferenceCategory

--- a/res/layout/preference_category.xml
+++ b/res/layout/preference_category.xml
@@ -2,4 +2,7 @@
  <TextView xmlns:android="http://schemas.android.com/apk/res/android"
 	style="@style/Nullwire.Widget.TextView.ListSeparator"
 	android:id="@+android:id/title"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:padding="3dip"
  	/>
