--- a/res/drawable/list_row_background.xml
+++ b/res/drawable/list_row_background.xml
@@ -2,7 +2,7 @@
 <shape 	xmlns:android="http://schemas.android.com/apk/res/android" 
 		android:shape="rectangle"> 
         <gradient 
-                android:startColor="#ff2881bf" 
-                android:endColor="#ff035c99" 
+                android:startColor="#ffffff" 
+                android:endColor="#e7e7e7" 
                 android:angle="270"/> 
 </shape>
