--- a/res/layout/message.xml
+++ b/res/layout/message.xml
@@ -3,6 +3,6 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-	android:background="#035c99"
-    >
+    android:background="#ffffff"
+>
 </LinearLayout>
