--- a/res/layout/preference_category.xml
+++ b/res/layout/preference_category.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
  <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-	style="@style/Nullwire.Widget.TextView.ListSeparator"
+	style="@style/Yammer.Widget.TextView.ListSeparator"
 	android:id="@+android:id/title"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
