--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -15,7 +15,7 @@
 		<item name="android:textStyle">bold</item>
 	</style>
 	
-    <style name="Nullwire.Theme.Light.NoTitleBar" parent="android:Theme.Light">  
+    <style name="Yammer.Theme.Light.NoTitleBar" parent="android:Theme.Light">  
         <item name="android:textColorPrimary">@android:color/primary_text_light</item>
         <item name="android:textColorSecondary">@android:color/secondary_text_light</item>
         <item name="android:textColorTertiary">@android:color/tertiary_text_light</item>
@@ -23,14 +23,14 @@
         <item name="android:textColorSecondaryInverse">@android:color/secondary_text_light</item>
         <item name="android:textColorTertiaryInverse">@android:color/tertiary_text_light</item>
 		<item name="android:windowNoTitle">true</item>
-		<item name="android:preferenceCategoryStyle">@style/Nullwire.Preference.Category</item>
+		<item name="android:preferenceCategoryStyle">@style/Yammer.Preference.Category</item>
     </style>
     
-    <style name="Nullwire.Preference.Category" parent="android:Preference.Category">
+    <style name="Yammer.Preference.Category" parent="android:Preference.Category">
     	<item name="android:layout">@layout/preference_category</item>
     </style>
     
- 	<style name="Nullwire.Widget.TextView.ListSeparator" parent="android:Widget.TextView.ListSeparator">
+ 	<style name="Yammer.Widget.TextView.ListSeparator" parent="android:Widget.TextView.ListSeparator">
 		<item name="android:background">@drawable/preference_category_background</item>
 		<item name="android:textColor">#ffffffff</item>	
  	</style>    
