--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -15,6 +15,16 @@
   android:textColor="#ff000000"
   android:textSize="20sp"
 />
+
+<TextView
+  android:id="@+android:id/feed_label"
+  android:layout_width="fill_parent" 
+  android:layout_height="wrap_content" 
+  android:textColor="#ffffff"
+  android:gravity="center_horizontal"
+  android:textSize="14sp"
+  android:visibility="gone"
+/>
 	    
 <view 	
   xmlns:android="http://schemas.android.com/apk/res/android"
