Changed package to com.yammer.v1
I had to do this because the Android Marketplace won't let me delete
the previous apps.  LAME!

--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -11,7 +11,7 @@
 		</PreferenceScreen>
 	</PreferenceCategory-->
 	<PreferenceCategory android:title="@string/pref_category_account">
-		<com.yammer.EditAccountPreference 
+		<com.yammer.v1.EditAccountPreference 
 			android:key="key_clear_account"
 			android:title="Clear account information"
 			android:summary="Clear account data and reauthenticate with Yammer."
