--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -6,19 +6,23 @@
 	</array>
 	<string-array name="settings_update_entries">
 		<item>Manual refresh</item>
-		<item>Once a minute</item>
-		<item>Every 2 minutes</item>
-		<item>Every 3 minutes</item>
-		<item>Every 5 minutes</item>
+		<item>Every  5 minutes</item>
 		<item>Every 10 minutes</item>
+		<item>Every 15 minutes</item>
+		<item>Every 30 minutes</item>
+		<item>Every  1 hour</item>
+		<item>Every  2 hours</item>
+		<item>Every  4 hours</item>
 	</string-array>
 	<string-array name="settings_update_values">
-		<item>0</item>
-		<item>60</item>
-		<item>120</item>
-		<item>180</item>
-		<item>300</item>
-		<item>600</item>
+		<item>    0</item>
+		<item>  300</item>
+		<item>  600</item>
+		<item>  900</item>
+		<item> 1800</item>
+		<item> 3600</item>
+		<item> 7200</item>
+		<item>14400</item>
 	</string-array>
 	<string-array name="pref_message_click_entries">
 		<item>Reply to message</item>
