--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -6,6 +6,7 @@
 	</array>
 	<string-array name="settings_update_entries">
 		<item>Manual refresh</item>
+		<item>Every  1 minute</item>
 		<item>Every  5 minutes</item>
 		<item>Every 10 minutes</item>
 		<item>Every 15 minutes</item>
@@ -16,6 +17,7 @@
 	</string-array>
 	<string-array name="settings_update_values">
 		<item>    0</item>
+		<item>   60</item>
 		<item>  300</item>
 		<item>  600</item>
 		<item>  900</item>
